--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "date-fns": "^2.29.1",
     "dotenv": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
+    "rxjs": "^7.5.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
