--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/microservices": "^9.0.7",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.0",
     "bcrypt": "^5.0.1",
@@ -31,6 +32,7 @@
     "date-fns": "^2.29.1",
     "dotenv": "^16.0.1",
     "jsonwebtoken": "^8.5.1",
+    "kafkajs": "^2.1.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
