--- a/apps/main/.prettierrc
+++ b/apps/main/.prettierrc
@@ -1,4 +1,9 @@
 {
+  "printWidth": 120,
+  "semi": true,
+  "useTabs": true,
+  "tabWidth": 2,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "endOfLine": "auto"
 }
